# pyuic5App

./: pyproject.toml
pyuic5app/: main1.py
