[tool.poetry]
name = "pyuic5app"
version = "0.1.0"
description = ""
authors = ["asewvtft545456"]
readme = "README.md"

[tool.poetry.scripts]
pyuic5app = "pyuic5app.main1:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.7.0"}
pyqt5 = "^5.15.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
